--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,19 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching and stuff"
 permalink: /teaching/
 author_profile: true
 ---
+
+
+Something...
+
+<!--
 
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+-->
