--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,6 +8,24 @@ author_profile: true
 
 Something...
 
+<h2>CS 4501: Human-Centered Computing for Digital Well-Being</h2>
+
+This course explores the intersection of technology, design, and human well-being, focusing on how digital systems impact our attention, emotions, relationships, and health. It will examine how computing systems can be designed to support digital well-being, addressing challenges like managing attention, reducing distractions, fostering meaningful connections, and promoting ethical technology use. Students will engage with concepts from human-centered design, digital well-being, contemplative computing, and positive computing, developing the skills to create technologies that enhance focus, connection, and quality of life. By blending computer science concepts with insights from digital well-being research, students will gain the knowledge and tools to design technology that serves human flourishing. The course incorporates a "technology sabbatical" to foster mindfulness, deepen learning, and enhance students’ relationship with technology.
+
+<h2>CS 3710: Introduction to Cybersecurity/h2>
+
+This course provides a comprehensive overview of essential cybersecurity concepts. It addresses both technical and non-technical concepts such as risks, threats, and vulnerabilities associated with the evolving cyber ecosystem. You will gain knowledge of fundamental cybersecurity principles and industry applications and examples. You will gain hands-on experience with realistic security scenarios and tools in a cloud-based lab environment.
+
+<h2>CS 4501: Cybersecurity abnd Elections</h2>
+
+Fair and secure elections are essential to democracy. Voting systems are as much a part of our nation’s critical infrastructure as are transportation, energy, and water systems. Thus, the importance of securing state and local voting systems that support both national and local elections cannot be underestimated.
+This course provides an overview of the historical, cultural, and political significance of voting, the technical issues of securing election processes, and careers in service for public good. The course covers typical election system infrastructures, their operation, and the voting systems security guidelines and locality election security standards set by the Commonwealth of Virginia.  Topics include risk assessment of registrar information systems, analysis of system and network documentation for accuracy, software patches, systems updates, configuring and deploying appropriate security software, and ensuring compliance with best practices in securing systems.
+This course may be taken independently or as the required gateway course for the Virginia Cyber Navigator Internship Program (VA-CNIP).
+
+<h2>CS 4457: Computer Networks</h2>
+
+Without networking, the Internet wouldn’t exist. We will demystify the Internet and other communication networks over the course of the semester by providing a foundation in computer networking across the OSI and TCP/IP networking models. We will take a practical approach and emphasize the core systems that make global-scale networking possible. You will learn about network design, protocols, network monitoring and troubleshooting, wireless and mobile networks, and network security.
+
 <!--
 
 {% include base_path %}
