--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,7 +12,7 @@ Something...
 
 This course explores the intersection of technology, design, and human well-being, focusing on how digital systems impact our attention, emotions, relationships, and health. It will examine how computing systems can be designed to support digital well-being, addressing challenges like managing attention, reducing distractions, fostering meaningful connections, and promoting ethical technology use. Students will engage with concepts from human-centered design, digital well-being, contemplative computing, and positive computing, developing the skills to create technologies that enhance focus, connection, and quality of life. By blending computer science concepts with insights from digital well-being research, students will gain the knowledge and tools to design technology that serves human flourishing. The course incorporates a "technology sabbatical" to foster mindfulness, deepen learning, and enhance students’ relationship with technology.
 
-<h2>CS 3710: Introduction to Cybersecurity/h2>
+<h2>CS 3710: Introduction to Cybersecurity</h2>
 
 This course provides a comprehensive overview of essential cybersecurity concepts. It addresses both technical and non-technical concepts such as risks, threats, and vulnerabilities associated with the evolving cyber ecosystem. You will gain knowledge of fundamental cybersecurity principles and industry applications and examples. You will gain hands-on experience with realistic security scenarios and tools in a cloud-based lab environment.
 
