--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,9 @@
 ---
 layout: archive
-title: "Teaching and stuff"
+title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
-
-Something...
 
 <h2>CS 4501: Human-Centered Computing for Digital Well-Being</h2>
 
